--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -4,6 +4,9 @@ on:
   workflow_dispatch:
   pull_request_target:
     types: [opened, synchronize, reopened]
+    paths:
+      - "src/main/resources/messages_*.properties"
+
 
 jobs:
   check-files:
