--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -104,6 +104,8 @@ jobs:
 
       - name: Add translation keys
         run: |
+          cd ${{ env.BRANCH_PATH }}
+          ls
           git add .
           git diff --staged --quiet || echo "CHANGES_DETECTED=true" >> $GITHUB_ENV
 
