--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -113,4 +113,8 @@ jobs:
           git add .
           git diff --staged --quiet || echo "CHANGES_DETECTED=true" >> $GITHUB_ENV
           git commit -m "Update translation files" || echo "No changes to commit"
+      - name: Push
+        if: env.CHANGES_DETECTED == 'true'
+        run: |
+          cd ${{ env.BRANCH_PATH }}
           git push origin ${{ env.BRANCH_PATH }}
