--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -77,7 +77,7 @@ jobs:
       - name: Capture output
         id: capture-output
         run: |
-          if [ -f failure.txt ]; then
+          if [ -f failure.txt ] && [ -s failure.txt ]; then
             echo "Test failed, capturing output..."
             # Use the cat command to avoid issues with special characters in environment variables
             ERROR_OUTPUT=$(cat failure.txt)
@@ -85,9 +85,13 @@ jobs:
             echo "$ERROR_OUTPUT" >> $GITHUB_ENV
             echo "EOF" >> $GITHUB_ENV
             echo $ERROR_OUTPUT
+          else
+            echo "No errors found."
+            echo "ERROR_OUTPUT=" >> $GITHUB_ENV
           fi
 
       - name: Post comment on PR
+        if: env.ERROR_OUTPUT != ''
         uses: actions/github-script@v7
         with:
           script: |
