--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -130,7 +130,7 @@ jobs:
           python-version: "3.x"
 
       - name: Run Python script to check files
-        if: github.event_name == 'pull_request_target'
+        if: github.event_name == 'push'
         id: run-check
         run: |
           python main-branch/.github/scripts/check_language_files.py --reference-file src/main/resources/messages_en_GB.properties --branch main --files
