--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -115,6 +115,25 @@ jobs:
               body: `## Translation Verification Summary\n\n\n${ERROR_OUTPUT}\n`
             });
 
+      - name: Set up git config
+        if: github.event_name == 'pull_request_target'
+        run: |
+          git config --global user.email "GitHub Action <action@github.com>"
+          git config --global user.name "GitHub Action <action@github.com>"
+
+      - name: Add translation keys
+        if: github.event_name == 'pull_request_target'
+        run: |
+          cd ${{ env.BRANCH_PATH }}
+          git add src/main/resources/messages_*.properties
+          git diff --staged --quiet || echo "CHANGES_DETECTED=true" >> $GITHUB_ENV
+          git commit -m "Update translation files" || echo "No changes to commit"
+      - name: Push
+        if: github.event_name == 'pull_request_target' && env.CHANGES_DETECTED == 'true'
+        run: |
+          cd pr-branch
+          git push origin ${{ github.head_ref }} || echo "Push failed: possibly no changes to push"
+
   update-translations-main:
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
