--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -99,12 +99,35 @@ jobs:
             const { GITHUB_REPOSITORY, ERROR_OUTPUT } = process.env;
             const [repoOwner, repoName] = GITHUB_REPOSITORY.split('/');
             const prNumber = context.issue.number;
-            await github.rest.issues.createComment({
+
+            // Find existing comment
+            const comments = await github.rest.issues.listComments({
               owner: repoOwner,
               repo: repoName,
-              issue_number: prNumber,
-              body: `## Translation Verification Summary\n\n\n${ERROR_OUTPUT}\n`
+              issue_number: prNumber
             });
+
+            const comment = comments.data.find(c => c.body.includes("## Translation Verification Summary"));
+
+            if (comment) {
+              // Update existing comment
+              await github.rest.issues.updateComment({
+                owner: repoOwner,
+                repo: repoName,
+                comment_id: comment.id,
+                body: `## Translation Verification Summary\n\n\n${ERROR_OUTPUT}\n`
+              });
+              console.log("Updated existing comment.");
+            } else {
+              // Create new comment if no existing comment is found
+              await github.rest.issues.createComment({
+                owner: repoOwner,
+                repo: repoName,
+                issue_number: prNumber,
+                body: `## Translation Verification Summary\n\n\n${ERROR_OUTPUT}\n`
+              });
+              console.log("Created new comment.");
+            }
 
       - name: Set up git config
         run: |
