--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -109,7 +109,10 @@ jobs:
 
             const comment = comments.data.find(c => c.body.includes("## Translation Verification Summary"));
 
-            if (comment) {
+            // Only allow the action user to update comments
+            const expectedActor = "github-actions[bot]";
+
+            if (comment && comment.user.login === expectedActor) {
               // Update existing comment
               await github.rest.issues.updateComment({
                 owner: repoOwner,
@@ -118,7 +121,7 @@ jobs:
                 body: `## Translation Verification Summary\n\n\n${ERROR_OUTPUT}\n`
               });
               console.log("Updated existing comment.");
-            } else {
+            } else if (!comment) {
               // Create new comment if no existing comment is found
               await github.rest.issues.createComment({
                 owner: repoOwner,
@@ -127,6 +130,8 @@ jobs:
                 body: `## Translation Verification Summary\n\n\n${ERROR_OUTPUT}\n`
               });
               console.log("Created new comment.");
+            } else {
+              console.log("Comment update attempt denied. Actor does not match.");
             }
 
       - name: Set up git config
