--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -107,7 +107,7 @@ jobs:
               issue_number: prNumber
             });
 
-            const comment = comments.data.find(c => c.body.includes("## Translation Verification Summary"));
+            const comment = comments.data.find(c => c.body.includes("## 🚀 Translation Verification Summary"));
 
             // Only allow the action user to update comments
             const expectedActor = "github-actions[bot]";
@@ -118,7 +118,7 @@ jobs:
                 owner: repoOwner,
                 repo: repoName,
                 comment_id: comment.id,
-                body: `## Translation Verification Summary\n\n\n${ERROR_OUTPUT}\n`
+                body: `## 🚀 Translation Verification Summary\n\n\n${ERROR_OUTPUT}\n`
               });
               console.log("Updated existing comment.");
             } else if (!comment) {
@@ -127,7 +127,7 @@ jobs:
                 owner: repoOwner,
                 repo: repoName,
                 issue_number: prNumber,
-                body: `## Translation Verification Summary\n\n\n${ERROR_OUTPUT}\n`
+                body: `## 🚀 Translation Verification Summary\n\n\n${ERROR_OUTPUT}\n`
               });
               console.log("Created new comment.");
             } else {
