--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -136,8 +136,8 @@ jobs:
 
       - name: Set up git config
         run: |
-          git config --global user.email "github-actions@github.com"
-          git config --global user.name "github-actions"
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git config --global user.name 'github-actions[bot]'
 
       - name: Add translation keys
         run: |
@@ -170,8 +170,8 @@ jobs:
 
       - name: Set up git config
         run: |
-          git config --global user.email "github-actions@github.com"
-          git config --global user.name "github-actions"
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git config --global user.name 'github-actions[bot]'
 
       - name: Add translation keys
         run: |
