--- a/.github/workflows/check_properties.yml
+++ b/.github/workflows/check_properties.yml
@@ -92,7 +92,9 @@ jobs:
             --branch "${BRANCH_PATH}" \
             --files ${CHANGED_FILES} > failure.txt || true
 
-      - run: cat failure.txt
+      - name: cat
+        shell: bash
+        run: cat failure.txt
 
       - name: Capture output
         id: capture-output
