--- a/.github/workflows/check_properties.yml
+++ b/.github/workflows/check_properties.yml
@@ -86,7 +86,7 @@ jobs:
             --actor ${{ github.event.pull_request.user.login }} \
             --reference-file "${REFERENCE_FILE}" \
             --branch "${BRANCH_PATH}" \
-            --files "${CHANGED_FILES[@]}" > failure.txt || true
+            --files "${CHANGED_FILES}" > failure.txt || true
 
       - name: Capture output
         id: capture-output
