--- a/.github/workflows/check_properties.yml
+++ b/.github/workflows/check_properties.yml
@@ -94,9 +94,11 @@ jobs:
             echo "$ERROR_OUTPUT" >> $GITHUB_ENV
             echo "EOF" >> $GITHUB_ENV
             echo "${ERROR_OUTPUT}"
+            echo "FAIL_JOB=true" >> $GITHUB_ENV
           else
             echo "No errors found."
             echo "ERROR_OUTPUT=" >> $GITHUB_ENV
+            echo "FAIL_JOB=false" >> $GITHUB_ENV
           fi
 
       - name: Post comment on PR
@@ -141,6 +143,12 @@ jobs:
             } else {
               console.log("Comment update attempt denied. Actor does not match.");
             }
+
+      - name: Fail job if errors found
+        if: env.FAIL_JOB == 'true'
+        run: |
+          echo "Failing the job because errors were detected."
+          exit 1
 
   update-translations-main:
     if: github.event_name == 'push'
