--- a/.github/workflows/a_Validate_PR_Changes.yml
+++ b/.github/workflows/a_Validate_PR_Changes.yml
@@ -11,8 +11,10 @@ jobs:
     permissions:
       contents: read
     steps:
-      - name: Install GitHub CLI
-        run: sudo apt-get update && sudo apt-get install -y gh
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: Fetch PR changed files
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
