--- a/.github/workflows/a_Validate_PR_Changes.yml
+++ b/.github/workflows/a_Validate_PR_Changes.yml
@@ -22,3 +22,17 @@ jobs:
           echo "Fetching changed files using GitHub CLI..."
           gh pr view ${{ github.event.pull_request.number }} --json files -q ".files[].path" > changed_files.txt
           cat changed_files.txt
+
+      - name: Trigger secure workflow
+        uses: actions/github-script@v7
+        with:
+          script: |
+            github.rest.actions.createWorkflowDispatch({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              workflow_id: "secure-check.yml",
+              ref: context.ref,
+              inputs: {
+                files: require('fs').readFileSync('changed_files.txt', 'utf8')
+              }
+            })
